@@ -12,7 +12,10 @@ module ActiveScaffold::Actions
     def deleted
       query = PaperTrail::Version.destroys.where(:item_type => active_scaffold_config.model.name)
       if nested? && nested.child_association&.belongs_to? && PaperTrail::Version.respond_to?(:where_object)
-        query = query.where_object(nested.child_association.foreign_key => nested.parent_id)
+        foreign_key = nested.child_association.foreign_key
+        parent_id = nested.parent_id
+        parent_id = parent_id&.to_i if self.class.active_scaffold_config.columns[foreign_key]&.number?
+        query = query.where_object(foreign_key => parent_id)
       end
       pager = Paginator.new(query.count, active_scaffold_config.list.per_page) do |offset, per_page|
         query.offset(offset).limit(per_page).map(&:reify)
