@@ -14,6 +14,7 @@
 - Remove delayed_setup, as it didn't work since rails 5.2
 - Support Turbo
 - Fix detecting when form submit to iframe has ended
+- Fix list deleted records on nested listings using JSON column or serializer in PaperTrail versions table
 
 = 3.6.20
 - Fix numeric search on field search for rails >= 5.0
